<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <PreferenceCategory
        android:key="so_min_max"
        android:title="@string/so_min_max">

        <ListPreference
            android:dialogTitle="@string/pt_so_max"
            android:key="pref_so_max"
            android:persistent="true"
            android:title="@string/pt_so_max"/>
        <ListPreference
            android:dialogTitle="@string/pt_so_min"
            android:key="pref_so_min"
            android:persistent="true"
            android:title="@string/pt_so_min"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="so_minmax_boot"
            android:summary="@string/ps_blx_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="oc_live"
        android:title="@string/liveoc">
        <Preference
            android:key="pref_oc_val"
            android:title="@string/oc_value"/>
        <ListPreference
            android:dialogTitle="@string/oc_target_low"
            android:key="pref_oc_low"
            android:persistent="true"
            android:title="@string/oc_target_low"/>
        <ListPreference
            android:dialogTitle="@string/oc_target_high"
            android:key="pref_oc_high"
            android:persistent="true"
            android:title="@string/oc_target_high"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="oc_live_boot"
            android:summary="@string/ps_blx_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="mpdecision"
        android:title="@string/mpdecision">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_mpdecision"
            android:title="@string/pt_mpdecision"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="mpdecision_boot"
            android:summary="@string/ps_dsync"
            android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="msmhotplug"
        android:title="@string/msmhotplug">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_msmhotplug"
            android:summary="@string/ps_dsync"
            android:title="@string/pt_msmhotplug"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="hp"
        android:title="@string/pt_hp">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_hp"
            android:summary="@string/ps_hp"
            android:title="@string/pt_hp"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="hotplugset"
        android:title="@string/pt_hotplug">
        <Preference
            android:key="pref_hotplug"
            android:title="@string/pt_hotplug"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="cpuq"
        android:title="@string/pt_cpuquiet">
        <ListPreference
            android:dialogTitle="@string/pt_cpuquiet"
            android:key="pref_cpuquiet"
            android:persistent="true"
            android:title="@string/pt_cpuquiet"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="cpuq_boot"
            android:summary="@string/ps_restore_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="intelliplug"
        android:title="@string/intelliplug">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_intelliplug"
            android:summary="@string/ps_dsync"
            android:title="@string/pt_intelliplug"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="ecomode"
        android:title="@string/ecomode">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_ecomode"
            android:summary="@string/ps_dsync"
            android:title="@string/pt_ecomode"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="mc_ps"
        android:title="@string/prefcat_mc_ps">
        <ListPreference
            android:dialogTitle="@string/pt_mc_ps"
            android:key="pref_mcps"
            android:persistent="true"
            android:title="@string/pt_mc_ps"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_mc_ps"
            android:summary="@string/ps_blx_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>
    <!-- -GPU- -->
    <PreferenceCategory
        android:key="gpu_max_clk"
        android:title="@string/pt_gpu_fmax">
        <ListPreference
            android:dialogTitle="@string/pt_gpu_fmax"
            android:key="pref_gpu_fmax"
            android:persistent="true"
            android:title="@string/pt_gpu_fmax"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="gpu_fmax_boot"
            android:summary="@string/ps_blx_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="gpugovset"
        android:title="@string/pt_gpugov_set">
        <Preference
            android:key="pref_gpugov_set"
            android:title="@string/pt_gpugov_set"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="uv_krait"
        android:title="@string/krait">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_krait_boost"
            android:summary="@string/ps_krait_boost"
            android:title="@string/pt_krait_boost"/>
        <ListPreference
            android:dialogTitle="@string/pt_krait_thres"
            android:key="pref_krait_thres"
            android:persistent="true"
            android:title="@string/pt_krait_thres"/>
        <Preference
            android:key="pref_krait_lo"
            android:summary="@string/ps_krait_lo"
            android:title="@string/pt_krait_lo"/>
        <Preference
            android:key="pref_krait_hi"
            android:summary="@string/ps_krait_hi"
            android:title="@string/pt_krait_hi"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="krait_uv_boot"
            android:summary="@string/ps_restore_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>
</PreferenceScreen>