<?xml version="1.0" encoding="utf-8"?>
<!-- Created by h0rn3t on 21.07.2013.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:gravity="center_horizontal">
    <LinearLayout
            android:id="@+id/device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
    <TextView
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_marginTop="20dp"/>
    <TextView
            android:id="@+id/board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:layout_marginTop="5dp"/>
    <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="5dp"/>
        </LinearLayout>

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:id="@+id/attn"
        android:src="@drawable/ic_attn"
        android:layout_marginTop="20dp" />

    <TextView
            android:id="@+id/flashinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsupported_info"
            android:layout_gravity="center"
        android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="16dp"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_choose"
            android:id="@+id/chooseBtn"
            android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fmt_backup"
        android:id="@+id/bkBtn"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="10dp" />

</LinearLayout>